--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnection": "Server=localhost;Database=ComandosApi;User Id=CmdApiUser;Password=1Mi2Contraseña3;Encrypt=false;Pooling=true;"
+
+  }
 }
