--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SqlServerConnection": "Server=localhost;Database=ComandosApi;Encrypt=false;Pooling=true;"
+
   }
 }
