--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -5,9 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SqlServerConnection": "Server=localhost;Database=ComandosApi;User Id=CmdApiUser;Password=1Mi2Contraseña3;Encrypt=false;Pooling=true;"
-
-  }
+  "AllowedHosts": "*"
+  
 }
