--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="C:\Users\alvar\source\LibroApi\CommandsApiSol\src\CommandsApi.csproj" />
+		<ProjectReference Include="..\src\CommandsApi.csproj" />
 	</ItemGroup>
 
 </Project>
