--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
   inputs:
    command: publish
    publishWebProjects: false
-   projects: 'src/CommandAPI/*.csproj'
+   projects: 'src/*.csproj'
    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
 
 - task: PublishBuildArtifacts@1
